# obs-controller

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  azure-pipelines.yml  build.rs  meson.build  wrapper.h
.cargo/: config
.github/workflows/: meson.yml
bindings/: generated.rs
ci/linux/: build-ubuntu.sh  install-dependencies-ubuntu.sh  package-ubuntu.sh
ci/macos/: build-macos.sh  install-dependencies-macos.sh
ci/windows/: install-choco.cmd  prepare-windows.cmd
src/: api.cpp  api.hpp  dialog.rs  lib.rs  macros.rs  main.cpp  meson.build  obs.rs  recording.rs  server.rs  verification.rs
