[package]
name = "obs-controller"
version = "0.1.0"
authors = ["Beezig Team <contact@beezig.eu>"]
edition = "2018"
description = "An OBS plugin to control recording status over HTTP."
readme = "README.md"
repository = "https://gitlab.com/Beezig/obs-controller"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
tiny_http = "0.6"
lazy_static = "1.4.0"
ed25519-dalek = "1.0.1"
rand_core = "0.5.1"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3.1"
sha2 = "0.9.2"
byteorder = "1.3.4"
yauuid = "0.2.1"
base64 = "0.13.0"
x25519-dalek = "1.1.0"
ring = {version = "0.17.0-alpha.7", default-features = false, features = ["std"]}

[build-dependencies]
bindgen = "0.55.1"

[features]
macos = []

[lib]
name = "obs_controller"
crate-type = ["cdylib"]

[profile.release]
# Size optimizations
opt-level = "z"
lto = true